--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ colorama==0.4.4
 cryptography==3.4.8
 dnspython==1.16.0
 ecdsa==0.17.0
+email-validator==1.1.3
 fastapi==0.68.1
 h11==0.12.0
 httptools==0.2.0
+idna==3.2
 passlib==1.7.4
 pyasn1==0.4.8
 pycparser==2.20
