--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aiofiles==0.7.0
 asgiref==3.4.1
 bcrypt==3.2.0
+certifi==2021.5.30
 cffi==1.14.6
 click==8.0.1
+cloudinary==1.26.0
 colorama==0.4.4
 cryptography==3.4.8
 dnspython==1.16.0
@@ -12,6 +15,7 @@ h11==0.12.0
 httptools==0.2.0
 idna==3.2
 passlib==1.7.4
+phonenumbers==8.12.33
 pyasn1==0.4.8
 pycparser==2.20
 pydantic==1.8.2
@@ -24,6 +28,7 @@ rsa==4.7.2
 six==1.16.0
 starlette==0.14.2
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 uvicorn==0.15.0
 watchgod==0.7
 websockets==10.0
