--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pymongo==3.12.0
 python-dotenv==0.19.0
 python-jose==3.3.0
 python-multipart==0.0.5
+fastapi-mail
 PyYAML==5.4.1
 rsa==4.7.2
 six==1.16.0
